Improve API fetching for Vercel environment with better fallbacks

--- a/vercel.json
+++ b/vercel.json
@@ -22,5 +22,6 @@
         { "key": "X-Debug-Target", "value": "https://api.jolpi.ca/ergast" }
       ]
     }
-  ]
+  ],
+  "trailingSlash": false
 }
